src/test/ui/borrowck/borrowck-vec-pattern-move-tail.stderr
error[E0506]: cannot assign to `a[_]` because it is borrowed
  --> $DIR/borrowck-vec-pattern-move-tail.rs:12:5
   |
LL |         [1, 2, ref tail..] => tail,
   |                -------- borrow of `a[_]` occurs here
...
LL |     a[2] = 0;
   |     ^^^^^^^^ assignment to borrowed `a[_]` occurs here
LL |     println!("t[0]: {}", t[0]);
   |                          ---- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
